fixed wobble and legends shifting

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -62,7 +62,8 @@ svg{
     visibility: hidden;
     color:whitesmoke;
     width: 200px;
-    padding-bottom: 10px;
+    transform: translate(-20%,-20%);
+    /* padding-bottom: 10px; */
 }
 
 
@@ -81,6 +82,7 @@ svg{
     align-items: center;
     justify-content: center;
     /* background-color: darkslategrey; */
+    width: 20vw;
 }
 
 #leftSide2{
@@ -88,6 +90,7 @@ svg{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    width: 20vw;
 }
 
 #container{
@@ -104,12 +107,12 @@ svg{
 }
 
 #legend{
-    text-align: center;
+    /* text-align: center;
     min-height: 150px;
     max-width: 180px;
     margin-top: 40px;
     margin-bottom: 40px;
-    margin-left: -50px;
+    margin-left: -50px; */
 }
 
 #toggle{
